{
  "version": 4,
  "terraform_version": "1.2.2",
  "serial": 32,
  "lineage": "f27fb9e6-9c76-efd5-2c7e-4728800bf3a7",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:924989781299:loadbalancer/app/nginx-load-balancer/96956fcc54fd032d",
            "arn_suffix": "app/nginx-load-balancer/96956fcc54fd032d",
            "desync_mitigation_mode": "defensive",
            "dns_name": "nginx-load-balancer-361628343.eu-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-1:924989781299:loadbalancer/app/nginx-load-balancer/96956fcc54fd032d",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "nginx-load-balancer",
            "security_groups": [
              "sg-0b1f096b9875545f6"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0338a4115b0431fd7"
              },
              {
                "subnet_id": "subnet-09ce221fd52f2bcea"
              },
              {
                "subnet_id": "subnet-0c500447c07421217"
              }
            ],
            "subnets": [
              "subnet-0338a4115b0431fd7",
              "subnet-09ce221fd52f2bcea",
              "subnet-0c500447c07421217"
            ],
            "tags": {
              "Name": "my-nginx-app-alb"
            },
            "tags_all": {
              "Name": "my-nginx-app-alb"
            },
            "vpc_id": "vpc-093db49b4704e697b",
            "zone_id": "Z32O12XQLNTSW2"
          },
          "dependencies": [
            "aws_security_group.aws-lb",
            "aws_subnet.aws-subnet",
            "aws_vpc.aws-vpc",
            "data.aws_availability_zones.aws-az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:924989781299:listener/app/nginx-load-balancer/96956fcc54fd032d/1a55efd2b1f42a6c",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:924989781299:targetgroup/nginx-target-group/8e948f022b6f98d9",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:924989781299:listener/app/nginx-load-balancer/96956fcc54fd032d/1a55efd2b1f42a6c",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-1:924989781299:loadbalancer/app/nginx-load-balancer/96956fcc54fd032d",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb.main",
            "aws_alb_target_group.nginx_app",
            "aws_security_group.aws-lb",
            "aws_subnet.aws-subnet",
            "aws_vpc.aws-vpc",
            "data.aws_availability_zones.aws-az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "nginx_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:924989781299:targetgroup/nginx-target-group/8e948f022b6f98d9",
            "arn_suffix": "targetgroup/nginx-target-group/8e948f022b6f98d9",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:924989781299:targetgroup/nginx-target-group/8e948f022b6f98d9",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "nginx-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "nginx-alb-target-group"
            },
            "tags_all": {
              "Name": "nginx-alb-target-group"
            },
            "target_type": "ip",
            "vpc_id": "vpc-093db49b4704e697b"
          },
          "dependencies": [
            "aws_vpc.aws-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ecs-cluster-runner",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-029574c9b0349a8a7",
            "arn": "arn:aws:ec2:eu-west-1:924989781299:instance/i-0702aec87384dffd0",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "my-nginx-app-cluster-runner-iam-profile",
            "id": "i-0702aec87384dffd0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-04ed88e945fff58e1",
            "private_dns": "ip-10-0-1-144.eu-west-1.compute.internal",
            "private_ip": "10.0.1.144",
            "public_dns": "ec2-34-240-172-27.eu-west-1.compute.amazonaws.com",
            "public_ip": "34.240.172.27",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-07c9eb53bbe52977f",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09ce221fd52f2bcea",
            "tags": {
              "Environment": "Staging",
              "Name": "my-nginx-app-ecs-cluster-runner",
              "Role": "ecs-cluster"
            },
            "tags_all": {
              "Environment": "Staging",
              "Name": "my-nginx-app-ecs-cluster-runner",
              "Role": "ecs-cluster"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "volume_tags": {
              "Environment": "Staging",
              "Name": "my-nginx-app-ecs-cluster-runner",
              "Role": "ecs-cluster"
            },
            "vpc_security_group_ids": [
              "sg-09c0b674e396a3cf6"
            ]
          },
          "dependencies": [
            "aws_ecs_cluster.aws-ecs",
            "aws_iam_instance_profile.ecs-cluster-runner-profile",
            "aws_iam_role.ecs-cluster-runner-role",
            "aws_security_group.ecs-cluster-host",
            "aws_subnet.aws-subnet",
            "aws_vpc.aws-vpc",
            "data.aws_ami.ecs-ami",
            "data.aws_availability_zones.aws-az",
            "data.aws_iam_policy_document.instance-assume-role",
            "data.template_file.user_data_cluster"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "aws-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:924989781299:internet-gateway/igw-056ec3320cf1533aa",
            "id": "igw-056ec3320cf1533aa",
            "owner_id": "924989781299",
            "tags": {
              "Environment": "Staging",
              "Name": "my-nginx-app-igw"
            },
            "tags_all": {
              "Environment": "Staging",
              "Name": "my-nginx-app-igw"
            },
            "vpc_id": "vpc-093db49b4704e697b"
          },
          "dependencies": [
            "aws_vpc.aws-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_main_route_table_association",
      "name": "aws-route-table-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e893eaedebef7d62",
            "original_route_table_id": "rtb-0a8b0cba2d6ff1c27",
            "route_table_id": "rtb-073e192a4ad829239",
            "vpc_id": "vpc-093db49b4704e697b"
          },
          "dependencies": [
            "aws_internet_gateway.aws-igw",
            "aws_route_table.aws-route-table",
            "aws_vpc.aws-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "aws-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:924989781299:route-table/rtb-073e192a4ad829239",
            "id": "rtb-073e192a4ad829239",
            "owner_id": "924989781299",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-056ec3320cf1533aa",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "Staging",
              "Name": "my-nginx-app-route-table"
            },
            "tags_all": {
              "Environment": "Staging",
              "Name": "my-nginx-app-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-093db49b4704e697b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.aws-igw",
            "aws_vpc.aws-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "aws-ecs-tasks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:924989781299:security-group/sg-070595d33fbe289ff",
            "description": "Allow inbound access from the ALB only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-070595d33fbe289ff",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b1f096b9875545f6"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "nginx-ecs-tasks",
            "name_prefix": "",
            "owner_id": "924989781299",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "nginx-ecs-tasks"
            },
            "tags_all": {
              "Name": "nginx-ecs-tasks"
            },
            "timeouts": null,
            "vpc_id": "vpc-093db49b4704e697b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.aws-lb",
            "aws_vpc.aws-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "aws-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:924989781299:security-group/sg-0b1f096b9875545f6",
            "description": "nginx ALB Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b1f096b9875545f6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "nginx-load-balancer",
            "name_prefix": "",
            "owner_id": "924989781299",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "nginx-load-balancer"
            },
            "tags_all": {
              "Name": "nginx-load-balancer"
            },
            "timeouts": null,
            "vpc_id": "vpc-093db49b4704e697b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.aws-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs-cluster-host",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:924989781299:security-group/sg-09c0b674e396a3cf6",
            "description": "my-nginx-app-ecs-cluster-host",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ecs cluster egress",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09c0b674e396a3cf6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "admin SSH access to ecs cluster",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "my-nginx-app-ecs-cluster-host",
            "name_prefix": "",
            "owner_id": "924989781299",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "Staging",
              "Name": "my-nginx-app-ecs-cluster-host",
              "Role": "ecs-cluster"
            },
            "tags_all": {
              "Environment": "Staging",
              "Name": "my-nginx-app-ecs-cluster-host",
              "Role": "ecs-cluster"
            },
            "timeouts": null,
            "vpc_id": "vpc-093db49b4704e697b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.aws-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ecs-cluster-egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "ecs cluster egress",
            "from_port": 0,
            "id": "sgrule-3745484043",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-09c0b674e396a3cf6",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ecs-cluster-host",
            "aws_vpc.aws-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ecs-cluster-host-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "admin SSH access to ecs cluster",
            "from_port": 22,
            "id": "sgrule-124506906",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-09c0b674e396a3cf6",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ecs-cluster-host",
            "aws_vpc.aws-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "aws-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:924989781299:subnet/subnet-09ce221fd52f2bcea",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09ce221fd52f2bcea",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "924989781299",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Staging",
              "Name": "my-nginx-app-subnet-1"
            },
            "tags_all": {
              "Environment": "Staging",
              "Name": "my-nginx-app-subnet-1"
            },
            "vpc_id": "vpc-093db49b4704e697b"
          },
          "dependencies": [
            "aws_vpc.aws-vpc",
            "data.aws_availability_zones.aws-az"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:924989781299:subnet/subnet-0338a4115b0431fd7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0338a4115b0431fd7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "924989781299",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Staging",
              "Name": "my-nginx-app-subnet-2"
            },
            "tags_all": {
              "Environment": "Staging",
              "Name": "my-nginx-app-subnet-2"
            },
            "vpc_id": "vpc-093db49b4704e697b"
          },
          "dependencies": [
            "aws_vpc.aws-vpc",
            "data.aws_availability_zones.aws-az"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:924989781299:subnet/subnet-0c500447c07421217",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c500447c07421217",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "924989781299",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Staging",
              "Name": "my-nginx-app-subnet-3"
            },
            "tags_all": {
              "Environment": "Staging",
              "Name": "my-nginx-app-subnet-3"
            },
            "vpc_id": "vpc-093db49b4704e697b"
          },
          "dependencies": [
            "aws_vpc.aws-vpc",
            "data.aws_availability_zones.aws-az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "aws-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:924989781299:vpc/vpc-093db49b4704e697b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0481dbe317e74cdbb",
            "default_route_table_id": "rtb-073e192a4ad829239",
            "default_security_group_id": "sg-0d3c5132ee3d899b4",
            "dhcp_options_id": "dopt-0561e99e437998503",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-093db49b4704e697b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-073e192a4ad829239",
            "owner_id": "924989781299",
            "tags": {
              "Environment": "Staging",
              "Name": "my-nginx-app-vpc"
            },
            "tags_all": {
              "Environment": "Staging",
              "Name": "my-nginx-app-vpc"
            }
          }
        }
      ]
    }
  ]
}